# dbv

./: Cargo.toml  LICENSE-APACHE  README.md  dbv-27c1b4102a56844f.js  dbv-27c1b4102a56844f_bg.wasm  dbv-5032a79df5ed4f61.js  dbv-5032a79df5ed4f61_bg.wasm  dbv-60847510b15faaba.js  dbv-60847510b15faaba_bg.wasm  index.html  manifest.json  sw.js
.cargo/: config.toml
.github/workflows/: rust.yml  typos.yml
assets/: manifest.json
src/: app.rs  background_worker.rs  lib.rs  main.rs
src/app/: data_conversion.rs  data_definition.rs  display_slice.rs  local_experiments.rs  operational_state.rs  plot_zoom_reset.rs  prediction_classification.rs  py_experiment.rs  status_msg.rs  ui_blocks.rs
src/app/data_definition/: matlab.rs  undo_manager.rs
src/app/data_definition/undo_manager/: dequeue.rs
src/app/local_experiments/: proximity_score.rs  singlemax.rs
